@@ -1,6 +1,8 @@
 2008-02-15  Paul J Stevens <paul@nfg.nl>
 
-	* src/dbmail-imapsession.c, src/dbmail-mailbox.c, 
+	* src/authmodule.c, src/dbmodule.c:
+	small typos
+	* ChangeLog, src/dbmail-imapsession.c, src/dbmail-mailbox.c, 
 	src/dbmail-message.c, src/dbmailtypes.h, src/dm_db.c, src/dm_db.h, 
 	src/modules/dbmysql.c:
 	fix some typos in dbmysql and expand global_cache usage
